--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
           script: |
             core.setOutput('time', new Date(Date.now()).toISOString().replace(/[^0-9]/g, ""));
             core.setOutput('key', `${context.repo.owner}-${context.repo.repo}`);
+            
       - name: Cache src repos
         uses: actions/cache@v2.1.3
         id: cache
@@ -30,6 +31,8 @@ jobs:
       - name: Generate repo list
         id: repo
         uses: yi-Xu-0100/repo-list-generator@v1.0.0
+        with:
+          user: mirror2u
 
       - name: Mirror hub with cache and list
         uses: Yikun/hub-mirror-action@v0.13
